force-app/main/default/objects/Dummy26__c/Dummy26__c.object-meta.xml
<CustomObject>
    <label>Dummy26</label>
    <nameField>
        <label>Dummy26 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy26</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>