force-app/main/default/objects/Dummy26__c/fields/FooBar037__c.field-meta.xml
<CustomField>
    <fullName>FooBar037__c</fullName>
    <label>FooBar037</label>
    <length>255</length>
    <type>Text</type>
</CustomField>