force-app/main/default/objects/Dummy26__c/fields/FooBar083__c.field-meta.xml
<CustomField>
    <fullName>FooBar083__c</fullName>
    <label>FooBar083</label>
    <length>255</length>
    <type>Text</type>
</CustomField>