force-app/main/default/objects/Dummy26__c/fields/FooBar135__c.field-meta.xml
<CustomField>
    <fullName>FooBar135__c</fullName>
    <label>FooBar135</label>
    <length>255</length>
    <type>Text</type>
</CustomField>